Add TraitFactory for creating RaceTraits from data
Requesting a trait will trigger loading of RaceTraits
from JSON files, currently only from "resources/data/traits/base.json"
(which have to exist for successful factory initialization).